# ersap-demo

./: CMakeLists.txt  README.md  build.gradle  demo.ersap
config/quality/: checkstyle.xml
data/src/main/cpp/: CMakeLists.txt  image_data_type.cpp  image_data_type.hpp
data/src/main/java/org/jlab/clara/demo/data/: ImageDataType.java
data/src/test/cpp/: test_image_data_type.cpp
data/src/test/java/org/jlab/clara/demo/data/: ImageDataTypeTest.java
legacy/src/main/cpp/: CMakeLists.txt  image.hpp  jana_engine.cpp  jana_engine.hpp  jana_engine.source  pupil_detector.cpp  pupil_detector.hpp
legacy/src/main/java/org/jlab/clara/demo/: OpenCVDemo.java
legacy/src/main/java/org/jlab/clara/demo/core/: FaceDetector.java  Image.java  ImageReader.java  ImageWriter.java  ZipUtils.java
scripts/: install-demo  install-ersap  install-opencv  run-demo
services/src/main/cpp/: CMakeLists.txt  jana_service.cpp  jana_service.header  jana_service.hpp  jana_service.source  pupil_detector_service.cpp  pupil_detector_service.hpp
services/src/main/java/org/jlab/clara/demo/services/: FaceDetectorService.java  ImageReaderService.java  ImageWriterService.java
services/src/main/resources/: FaceDetectorService.yaml  ImageReaderService.yaml  ImageWriterService.yaml
